--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,12 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.charithe</groupId>
     <artifactId>kafka-maven-plugin</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>maven-plugin</packaging>
 
     <name>kafka-maven-plugin Maven Plugin</name>
@@ -45,7 +44,7 @@
     <scm>
         <developerConnection>scm:git:ssh://git@github.com/charithe/kafka-maven-plugin.git</developerConnection>
         <url>https://github.com/charithe/kafka-maven-plugin</url>
-        <tag>HEAD</tag>
+        <tag>kafka-maven-plugin-1.0.0</tag>
     </scm>
 
     <distributionManagement>
